--- a/Index.html
+++ b/Index.html
@@ -1,281 +1,110 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    @font-face {
-      font-family: 'Snap ITC';
-      src: local('Snap ITC');
-    }
+@font-face {
+  font-family: 'SnapITC';
+  src: url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
+}
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #fff;
+  color: #000;
+}
 
-    body {
-      font-family: 'Bahnschrift', sans-serif;
-      background: url('https://www.dropbox.com/scl/fi/6scs34cfiffalea8m5r6k/download.jfif?rlkey=9me88jua5fx4vxiizskj1lk3e&st=js2tc74z&raw=1') no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-    }
+header {
+  background-color: #d90429;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
-    header {
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+.logo {
+  font-family: 'SnapITC', sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 0 #000;
+}
 
-    .logo {
-      font-size: 32px;
-      font-family: 'Snap ITC';
-      font-weight: 700;
-      color: #e63946;
-      text-shadow: 2px 2px 0 #000;
-    }
+.search-bar {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
 
-    .nav-right {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
+.search-bar input {
+  width: 60%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  font-size: 16px;
+}
 
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      margin: 0 10px;
-      font-weight: bold;
-    }
+.nav-categories {
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+  gap: 30px;
+}
 
-    .nav-links a:hover {
-      color: #ff6b6b;
-    }
+.nav-categories a {
+  color: #d90429;
+  text-decoration: none;
+  font-weight: bold;
+  position: relative;
+}
 
-    .search-filter {
-      text-align: center;
-      margin: 20px auto 5px;
-    }
+.nav-categories a:hover::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #d90429;
+  bottom: -5px;
+  left: 0;
+}
 
-    .search-filter input[type="text"] {
-      padding: 8px;
-      width: 300px;
-      border-radius: 5px;
-      border: none;
-    }
+.icons {
+  display: flex;
+  gap: 15px;
+}
 
-    .category-bar {
-      text-align: center;
-      margin: 10px 0;
-    }
+.icons a {
+  color: white;
+  font-size: 20px;
+  text-decoration: none;
+  transition: transform 0.2s ease-in-out;
+}
 
-    .category-bar span {
-      color: black;
-      background: rgba(255,255,255,0.8);
-      padding: 5px 15px;
-      margin: 0 5px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+.icons a:hover {
+  transform: scale(1.2);
+}
 
-    .hero {
-      text-align: center;
-      padding: 80px 20px 40px;
-      background: rgba(0,0,0,0.4);
-    }
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
 
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
+.product {
+  background: #fff;
+  border: 1px solid #ddd;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  transition: 0.3s;
+}
 
-    .hero p {
-      font-size: 20px;
-    }
-
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 30px;
-      padding: 40px;
-      background: rgba(0,0,0,0.3);
-    }
-
-    .product {
-      background: rgba(255,255,255,0.85);
-      color: #000;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .product:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #000;
-    }
-
-    .product img {
-      width: 100%;
-      height: 250px;
-      object-fit: cover;
-    }
-
-    .product-info {
-      padding: 15px;
-      text-align: center;
-    }
-
-    .product-info h3 {
-      margin-bottom: 10px;
-    }
-
-    .buy-btn {
-      background-color: #e63946;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .buy-btn:hover {
-      background-color: #d90429;
-    }
-
-    #about-content {
-      padding: 20px;
-      margin-top: 40px;
-      background: rgba(255, 255, 255, 0.9);
-      color: black;
-      display: none;
-    }
-
-    footer {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      text-align: center;
-      color: white;
-    }
-
-    #loginPopup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255,255,255,0.95);
-      color: black;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #000;
-    }
-
-    #loginPopup input {
-      display: block;
-      width: 100%;
-      margin: 10px 0;
-      padding: 10px;
-    }
-
-    #loginPopup button {
-      background: #e63946;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="logo">FA-Tshirt</div>
-    <div class="nav-right">
-      <nav class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#products">Products</a>
-        <a href="#about" onclick="showAbout()">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <a href="#" onclick="showLogin()" style="color:white">Login</a>
-      <a href="#" style="color:white">Cart</a>
-    </div>
-  </header>
-
-  <div class="search-filter">
-    <input type="text" placeholder="Search for t-shirts...">
-  </div>
-
-  <div class="category-bar">
-    <span>Men</span>
-    <span>Women</span>
-    <span>Kids</span>
-  </div>
-
-  <section class="hero" id="home">
-    <h1>Welcome to FA-Tshirt</h1>
-    <p>Trendy | Comfortable | Affordable</p>
-  </section>
-
-  <section class="products" id="products">
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
-      <div class="product-info">
-        <h3>Black Round Neck</h3>
-        <p>₹299</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <div class="product-info">
-        <h3>White Graphic Tee</h3>
-        <p>₹349</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <div class="product-info">
-        <h3>Red Street Style</h3>
-        <p>₹399</p>
-        <button class="buy-btn">Add to Cart</button>
-      </div>
-    </div>
-  </section>
-
-  <section id="about-content">
-    <h2>Our Story</h2>
-    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 FA-Tshirt. All rights reserved.
-  </footer>
-
-  <div id="loginPopup">
-    <h2>Login</h2>
-    <input type="text" placeholder="Username">
-    <input type="password" placeholder="Password">
-    <button onclick="alert('Login Successful')">Login</button>
-  </div>
-
-  <script>
-    function showAbout() {
-      document.getElementById('about-content').style.display = 'block';
-      window.scrollTo(0, document.getElementById('about-content').offsetTop);
-    }
-    function showLogin() {
-      document.getElementById('loginPopup').style.display = 'block';
-    }
-  </script>
-</body>
-</html>
+.product:hover {
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  transform
